[gd_scene load_steps=2 format=3 uid="uid://c1xk18vybp4l"]

[ext_resource type="Script" uid="uid://dpe8ktquy6xht" path="res://src/lobby/nakama_client.gd" id="1_5reb6"]

[node name="LobbyScene" type="Node2D" node_paths=PackedStringArray("match_code_input")]
script = ExtResource("1_5reb6")
match_code_input = NodePath("MatchCodeInput")

[node name="createMatch" type="Button" parent="."]
offset_left = 41.0
offset_top = 37.0
offset_right = 189.0
offset_bottom = 80.0
text = "Cr√©er Match"

[node name="JoinMatch" type="Button" parent="."]
offset_left = 216.0
offset_top = 138.0
offset_right = 385.0
offset_bottom = 201.0
text = "Rejoindre match
"

[node name="MatchCodeInput" type="LineEdit" parent="."]
offset_left = 42.0
offset_top = 143.0
offset_right = 184.0
offset_bottom = 189.0
placeholder_text = "Code du match"
max_length = 5
clear_button_enabled = true

[node name="SendMessage" type="Button" parent="."]
offset_left = 50.0
offset_top = 273.0
offset_right = 341.0
offset_bottom = 331.0
text = "Envoyer un message via nakama"

[node name="SendMessageWebRTC" type="Button" parent="."]
offset_left = 54.0
offset_top = 349.0
offset_right = 341.0
offset_bottom = 411.0
text = "Envoyer un message via webrtc"

[connection signal="button_down" from="createMatch" to="." method="_on_create_match_button_down"]
[connection signal="button_down" from="JoinMatch" to="." method="_on_join_match_button_down"]
[connection signal="button_down" from="SendMessage" to="." method="_on_send_message_button_down"]
[connection signal="button_down" from="SendMessageWebRTC" to="." method="_on_send_message_web_rtc_button_down"]
